--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
       href="https://fonts.googleapis.com/css2?family=Doppio+One&family=Stick&display=swap"
       rel="stylesheet"
     />
+    <link rel="apple-touch-icon" sizes="180x180" href="/assets/favicon/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="/assets/favicon/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="/assets/favicon/favicon-16x16.png">
+<link rel="manifest" href="/assets/favicon/site.webmanifest">
     <link rel="stylesheet" href="styles.css" />
     <title>BH.dev</title>
   </head>
@@ -26,24 +30,24 @@
           <a href="">\\HOME</a>
         </li>
         <li class="link">
-          <a href="">\\PROJETOS</a>
+          <a href="#projects">\\PROJETOS</a>
         </li>
         <li class="link">
-          <a href="">\\CONTATOS</a>
+          <a href="#contact">\\CONTATOS</a>
         </li>
         <li class="social-media">
-          <a href=""
-            ><img src="/assets/social_media/Github.svg" alt="github"
+          <a href="https://github.com/BrunoHSS-sketch"
+          target="_blank"><img src="/assets/social_media/Github.svg" alt="github"
           /></a>
         </li>
         <li class="social-media">
-          <a href=""
-            ><img src="/assets/social_media/linkdin.svg" alt="linkdin"
+          <a href="https://www.linkedin.com/in/bruno-henrique-schmitt-dos-santos-090a7a1a9/"
+          target="_blank"><img src="/assets/social_media/linkdin.svg" alt="linkdin"
           /></a>
         </li>
         <li class="social-media">
-          <a href=""
-            ><img src="/assets/social_media/instagram.svg" alt="instagram"
+          <a href="https://www.instagram.com/bruno__schmitt/"
+          target="_blank"><img src="/assets/social_media/instagram.svg" alt="instagram"
           /></a>
         </li>
       </ul>
@@ -72,7 +76,7 @@
     </header>
 
     <main>
-      <section class="container-project">
+      <section class="container-project" id="projects">
         <h1>ALGUNS DE MEUS PROJETOS</h1>
         <div class="project">
           <nav>
@@ -84,13 +88,78 @@
                 <img src="/assets/projects/SOUM.png" alt="Soum App" class="img-project">
               </li>
               <li class="img-project">
-                <img src="/assets/projects/Planilheitor.png" alt="Planilheitor" class="img-project">
+                <img src="/assets/projects/nurcytime.png" alt="Planilheitor" class="img-project">
               </li>
             </ul>
           </nav>
         </div>
       </section>
+
+      <section>
+        <div class="form" id="contact">
+          <form>
+            <div class="title-form">
+              <h1>RESTOU DUVIDA OU ESTÁ INTERESSADO, ME ENVIE UM EMAIL</h1>
+            </div>
+              <div class="input-box-phone">
+                <label for="phone">TELEFONE</label><br>
+                <input type="text" id="phone" name="phone" required class="phone"><br>
+              </div>
+              <div class="input-group">
+                <div class="input-box">
+                  <label for="fname">NOME</label><br>
+                  <input type="text" id="fname" name="fname" required class="text"><br>
+                </div>
+                <div class="input-box">
+                  <label for="email">EMAIL</label><br>
+                  <input type="email" id="email" name="email" required class="text"><br>
+                </div>
+                <div class="input-box">
+                  <label for="subject">ASSUNTO</label><br>
+                  <input type="text" id="subject" name="subject" required class="text"><br>
+                </div>
+                <div class="input-box">
+                  <label for="message">MENSAGEM</label><br>
+                  <textarea name="message" required label="message" class="textarea"></textarea>
+                </div>
+              </div>
+              <div class="btn-send">
+                <button  class="btn">ENVIAR</button>
+              </div>
+              <div class="container-figure">
+                <img src="./assets/figure.png" alt="">
+              </div>
+            </div>
+          </form>
+        </div>
+      </section>
     </main>
 
+    <footer>
+      <hr class="line">
+      <div class="container-footer">
+        <h3>brunoschmitthenrique@gmail.com</h3>
+        <nav>
+          <ul>
+            <li class="social-media">
+              <a href="https://github.com/BrunoHSS-sketch"
+              target="_blank"><img src="/assets/social_media/Github.svg" alt="github"
+              /></a>
+            </li>
+            <li class="social-media">
+              <a href="https://www.linkedin.com/in/bruno-henrique-schmitt-dos-santos-090a7a1a9/"
+              target="_blank"><img src="/assets/social_media/linkdin.svg" alt="linkdin"
+              /></a>
+            </li>
+            <li class="social-media">
+              <a href="https://www.instagram.com/bruno__schmitt/"
+              target="_blank"><img src="/assets/social_media/instagram.svg" alt="instagram"
+              /></a>
+            </li>
+          </ul>
+        </nav>
+      </div>
+    </footer>
+    <script src="script.js"></script>
   </body>
 </html>
